<resources>
    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="skip_text">Skip</string>
    <string name="signUp_button_text">Create Account</string>
    <string name="login_button_text">Sign In</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="name_text">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="facebook_app_id">1551100988519385</string>
    <string name="fb_login_protocol_scheme">fb1551100988519385</string>

</resources>
